Style sur les articles et ajout des 4 polices

--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+ï»¿<!DOCTYPE html>
     <html lang="fr">
         <head>
             <meta charset="utf-8"/>
@@ -7,16 +7,28 @@
         </head>
         <body>
             <header><img class="logo" src="images/logo-ohmyfood.png" alt="logo" /></header>
-            <section>
-                <article>La note enchantée</article>
-                <article>Le choc à la française</article>
-                <article>Le décile des papilles</article>
-                <article>La pelette du goût</article>
-            </section>
+            <div class="container">
+                <article id="LNE">
+                    <h2>La note enchantÃ©e</h2>
+                    <h2>Menu</h2>
+                </article>
+                <article id="LCALF">
+                    <h2>Le choc Ã  la franÃ§aise</h2>
+                    <h2>Menu</h2>
+                </article>
+                <article id="LDDP">
+                    <h2>Le dÃ©cile des papilles</h2>
+                    <h2>Menu</h2>
+                </article>
+                <article id="LPDG">
+                    <h2>La pelette du goÃ»t</h2>
+                    <h2>Menu</h2>
+                </article>
+            </div>
 
 
             <footer>
-                <a>Mentions légales</a>
+                <a>Mentions lÃ©gales</a>
                 <a>Contactez-nous</a>
             </footer>
         </body>
