--- a/index.html
+++ b/index.html
@@ -9,27 +9,27 @@
             <header><img class="logo" src="images/logo-ohmyfood.png" alt="logo" /></header>
             <div class="container">
                 <article id="LNE">
+                    <img src="images/note.png" alt="Note de musique"/>
                     <h2>La note enchantée</h2>
-                    <h2>Menu</h2>
+                    <h3>Menu</h3>
                 </article>
                 <article id="LCALF">
                     <h2>Le choc à la française</h2>
-                    <h2>Menu</h2>
+                    <h3>Menu</h3>
                 </article>
                 <article id="LDDP">
                     <h2>Le décile des papilles</h2>
-                    <h2>Menu</h2>
+                    <h3>Menu</h3>
                 </article>
                 <article id="LPDG">
                     <h2>La pelette du goût</h2>
-                    <h2>Menu</h2>
+                    <h3>Menu</h3>
                 </article>
             </div>
-
-
+            <a href="#" class="button">Prochainement</a>
             <footer>
-                <a>Mentions légales</a>
-                <a>Contactez-nous</a>
+                <a href="#">Mentions légales</a>
+                <a href="#">Contactez-nous</a>
             </footer>
         </body>
     </html>
