--- a/index.html
+++ b/index.html
@@ -6,28 +6,36 @@
             <link rel="stylesheet" href="styles/css/style.css">
         </head>
         <body>
-            <header><img class="logo" src="images/logo-ohmyfood.png" alt="logo" /></header>
+            <header class="tete"><img class="logo" src="images/logo-ohmyfood.png" alt="logo" /></header>
             <div class="container">
-                <article id="LNE">
-                    <img src="images/note.png" alt="Note de musique"/>
-                    <h2>La note enchantée</h2>
-                    <h3>Menu</h3>
-                </article>
-                <article id="LCALF">
-                    <h2>Le choc à la française</h2>
-                    <h3>Menu</h3>
-                </article>
-                <article id="LDDP">
-                    <h2>Le décile des papilles</h2>
-                    <h3>Menu</h3>
-                </article>
-                <article id="LPDG">
-                    <h2>La pelette du goût</h2>
-                    <h3>Menu</h3>
-                </article>
+                <a href="la-note-enchantee.html">
+                    <article id="LNE">
+                        <img src="images/note.png" alt="Note de musique" />
+                        <h2>La note enchantée</h2>
+                        <h3>Menu</h3>
+                    </article>
+                </a>
+                <a href="le-chic-a-la-francaise.html">
+                    <article id="LCALF">
+                        <h2>Le chic à la française</h2>
+                        <h3>Menu</h3>
+                    </article>
+                </a>
+                <a href="le-delice-des-papilles.html">
+                    <article id="LDDP">
+                        <h2>Le délice des papilles</h2>
+                        <h3>Menu</h3>
+                    </article>
+                </a>
+                <a href="la-palette-du-gout.html">
+                    <article id="LPDG">
+                        <h2>La palette du goût</h2>
+                        <h3>Menu</h3>
+                    </article>
+                </a>
             </div>
             <a href="#" class="button">Prochainement</a>
-            <footer>
+            <footer class="pied">
                 <a href="#">Mentions légales</a>
                 <a href="#">Contactez-nous</a>
             </footer>
