Ajout prix et petits traits de séparation

--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
                 <a href="le-chic-a-la-francaise.html">
                     <article id="LCALF">
                         <h2>Le chic à la française</h2>
-                        <h3>Menu</h3>
+                        <h3 class="orange">Menu</h3>
                     </article>
                 </a>
                 <a href="le-delice-des-papilles.html">
