--- a/la-palette-du-gout.html
+++ b/la-palette-du-gout.html
@@ -14,17 +14,44 @@
                     <h2>La palette du goût</h2>
                 </header>
                 <h3>Esquisse</h3>
-                <p>Fricassé d’escargot au piment d’espelette</p>
-                <p>Œuf au plat assaisonné à la truffe sur lit de caviar</p>
-                <p>Foie gras de canard mi-cuit et ses copeaux de truffe noire</p>
+                <div class="box">
+                    <p>Fricassé d’escargot au piment d’espelette</p>
+                    <p>60€</p>
+                </div>
+                <div class="box">
+                    <p>Œuf au plat assaisonné à la truffe sur lit de caviar</p>
+                    <p>55€</p>
+                </div>
+                <div class="box">
+                    <p>Foie gras de canard mi-cuit et ses copeaux de truffe noire</p>
+                    <p>65€</p>
+                </div>
                 <h3>Œuvre de maître</h3>
-                <p>Filet de bœuf aux herbes accompagné de sa ribambelle de légumes</p>
-                <p>Parmentier de queue de bœuf à la truffe noire sur sa purée de panais</p>
-                <p>Filet de Turbot aux agrumes</p>
+                <div class="box">
+                    <p>Filet de bœuf aux herbes accompagné de sa ribambelle de légumes</p>
+                    <p>70€</p>
+                </div>
+                <div class="box">
+                    <p>Parmentier de queue de bœuf à la truffe noire sur sa purée de panais</p>
+                    <p>85€</p>
+                </div>
+                <div class="box">
+                    <p>Filet de Turbot aux agrumes</p>
+                    <p>125€</p>
+                </div>
                 <h3>Au sommet de l’art</h3>
-                <p>Paris-Brest revisité</p>
-                <p>Macaron au chocolat d’exception et glace à la vanille de Madagascar</p>
-                <p>Mousse au chocolat au piment d’espelette et à la truffe noire </p>
+                <div class="box">
+                    <p>Paris-Brest revisité</p>
+                    <p>55€</p>
+                </div>
+                <div class="box">
+                    <p>Macaron au chocolat d’exception et glace à la vanille de Madagascar</p>
+                    <p>65€</p>
+                </div>
+                <div class="box">
+                    <p>Mousse au chocolat au piment d’espelette et à la truffe noire</p>
+                    <p>60€</p>
+                </div>
             </div>
         </section>
         <footer class="pied">
