--- a/le-chic-a-la-francaise.html
+++ b/le-chic-a-la-francaise.html
@@ -13,18 +13,42 @@
                 <header>
                     <h2>Le chic à la française</h2>
                 </header>
-                <h3>Pour se mettre en appétit</h3>
-                <p>Tartare de pulpe acidulé aux zests d’orange</p>
-                <p>Velouté de légumes d’antan</p>
-                <p>Soupe à l’oignon revisitée</p>
-                <h3>Plaisir des papilles</h3>
-                <p>Coquilles Saint-Jacques accompagnées d’une purée de panais</p>
-                <p>Magret de canard et parmentier de pommes de terre</p>
-                <p>Pigeonneau d’Ille et Villaines sur son lit de gnocchis aux légumes</p>
-                <h3>Gourmandises sucrées</h3>
-                <p>Pétales de violettes glacés et purée de noisettes</p>
-                <p>Fondant au chocolat revisité</p>
-                <p>Millefeuille croustillant</p>
+                <div class="orange">
+                    <h3>Pour se mettre en appétit</h3>
+                    <div class="box">
+                        <p>Tartare de pulpe acidulé aux zests d’orange</p>
+                        <p>79€</p>
+                    </div>
+                    <div class="box">
+                        <p>Velouté de légumes d’antan</p>
+                        <p>57€</p>
+                    </div>
+                    <div class="box">
+                        <p>Soupe à l’oignon revisitée</p>
+                        <p>57€</p>
+                    </div>
+                </div>
+                <div class="violet">
+                    <h3>Plaisir des papilles</h3>
+                    <div class="box">
+                        <p>Coquilles Saint-Jacques accompagnées d’une purée de panais</p>
+                        <p>95€</p>
+                    </div>
+                    <div class="box">
+                        <p>Magret de canard et parmentier de pommes de terre</p>
+                        <p>88€</p>
+                    </div>
+                    <div class="box">
+                        <p>Pigeonneau d’Ille et Villaines sur son lit de gnocchis aux légumes</p>
+                        <p>175€</p>
+                    </div>
+                </div>
+                <div class="bleu">
+                    <h3>Gourmandises sucrées</h3>
+                    <p>Pétales de violettes glacés et purée de noisettes</p>
+                    <p>Fondant au chocolat revisité</p>
+                    <p>Millefeuille croustillant</p>
+                </div>
             </div>
         </section>
         <footer class="pied">
