--- a/le-delice-des-papilles.html
+++ b/le-delice-des-papilles.html
@@ -13,18 +13,45 @@
                 <header>
                     <h2>Le délice des papilles</h2>
                 </header>
-                <h3>Pour bien commencer</h3>
-                <p>Tartare de thon assaisonné au yuzu</p>
-                <p>Bouchée de homard croustillant et sa farandole de petits légumes</p>
-                <p>Velouté de cèpes aux truffes</p>
-                <h3>Pour bien continuer</h3>
-                <p>Poulet rôti aux herbes de provence et sa crème de truffe</p>
-                <p>Langouste rôtie et ses légumes de saison</p>
-                <p>Côte de bœuf angus et sa purée de panais</p>
-                <h3>Pour bien terminer</h3>
-                <p>Farandole de desserts du chef</p>
-                <p>Crème brulée revisitée</p>
-                <p>Tiramisu à la noisette</p>
+                <h3 class="trait-bleu-fonce">Pour bien commencer</h3>
+                <div class="box">
+                    <p>Tartare de thon assaisonné au yuzu</p>
+                    <p>55€</p>
+                </div>
+                <div class="box">
+                    <p>Bouchée de homard croustillant et sa farandole de petits légumes</p>
+                    <p>89€</p>
+                </div>
+                <div class="box">
+                    <p>Velouté de cèpes aux truffes</p>
+                    <p>56€</p>
+                </div>
+                <h3 class="trait-bleu">Pour bien continuer</h3>
+                <div class="box">
+                    <p>Poulet rôti aux herbes de provence et sa crème de truffe</p>
+                    <p>110€</p>
+                </div>
+                <div class="box">
+                    <p>Langouste rôtie et ses légumes de saison</p>
+                    <p>225€</p>
+                </div>
+                <div class="box">
+                    <p>Côte de bœuf angus et sa purée de panais</p>
+                    <p>115€</p>
+                </div>
+                <h3 class="trait-bleu-clair">Pour bien terminer</h3>
+                <div class="box">
+                    <p>Farandole de desserts du chef</p>
+                    <p>55€</p>
+                </div>
+                <div class="box">
+                    <p>Crème brulée revisitée</p>
+                    <p>60€</p>
+                </div>
+                <div class="box">
+                    <p>Tiramisu à la noisette</p>
+                    <p>55€</p>
+                </div>
             </div>
         </section>
         <footer class="pied">
