--- a/la-note-enchantee.html
+++ b/la-note-enchantee.html
@@ -15,14 +15,35 @@
                     <h2>La note enchantée</h2>
                 </header>
                 <h3>Prélude</h3>
-                <p>Ravioles de foie gras accompagnés de leur crème à la truffe</p>
-                <p>Caviar osciètre sur blini à la farine de blé noir</p>
-                <p>Homard et espuma de potiron marié aux zests d’orange</p>
-                <p>Foie gras de canard cuit entier, confiture de figue et pain toasté</p>
+                <div class="box">
+                    <p>Ravioles de foie gras accompagnés de leur crème à la truffe</p>
+                    <p>98€</p>
+                </div>
+                <div class="box">
+                    <p>Caviar osciètre sur blini à la farine de blé noir</p>
+                    <p>115€</p>
+                </div>
+                <div class="box">
+                    <p>Homard et espuma de potiron marié aux zests d’orange</p>
+                    <p>89€</p>
+                </div>
+                <div class="box">
+                    <p>Foie gras de canard cuit entier, confiture de figue et pain toasté</p>
+                    <p>105€</p>
+                </div>
                 <h3>Point d’orgue</h3>
-                <p>Noix de coquilles Saint-Jacques sur lit de purée de céleri-rave</p>
-                <p>Langoustine poêlée, purée de patate douce</p>
-                <p>Mijoté de queue de bœuf et riz sauvage aux zests citron</p>
+                <div class="box">
+                    <p>Noix de coquilles Saint-Jacques sur lit de purée de céleri-rave</p>
+                    <p>102€</p>
+                </div>
+                <div class="box">
+                    <p>Langoustine poêlée, purée de patate douce</p>
+                    <p>205€</p>
+                </div>
+                <div class="box">
+                    <p>Mijoté de queue de bœuf et riz sauvage aux zests citron</p>
+                    <p>169€</p>
+                </div>
                 <h3>Mouvement final</h3>
                 <p>Macaron noisette et chocolat, glace au caramel brun et sel de Guérande</p>
                 <p>Baba au rhum revisité avec son coulis de citron</p>
