--- a/index.html
+++ b/index.html
@@ -10,27 +10,27 @@
             <div class="container">
                 <a href="la-note-enchantee.html">
                     <article id="LNE">
-                        <img src="images/note.png" alt="Note de musique" />
+                        <img id="logo-note" src="images/note.png" alt="Note de musique" />
                         <h2>La note enchantée</h2>
-                        <h3>Menu</h3>
+                        <h3 class="titre">Menu</h3>
                     </article>
                 </a>
                 <a href="le-chic-a-la-francaise.html">
                     <article id="LCALF">
                         <h2>Le chic à la française</h2>
-                        <h3 class="orange">Menu</h3>
+                        <h3 class="orange titre">Menu</h3>
                     </article>
                 </a>
                 <a href="le-delice-des-papilles.html">
                     <article id="LDDP">
                         <h2>Le délice des papilles</h2>
-                        <h3>Menu</h3>
+                        <h3 class="titre">Menu</h3>
                     </article>
                 </a>
                 <a href="la-palette-du-gout.html">
                     <article id="LPDG">
                         <h2>La palette du goût</h2>
-                        <h3>Menu</h3>
+                        <h3 class="titre">Menu</h3>
                     </article>
                 </a>
             </div>
