--- a/la-note-enchantee.html
+++ b/la-note-enchantee.html
@@ -15,6 +15,7 @@
                     <h2>La note enchantée</h2>
                 </header>
                 <h3>Prélude</h3>
+                <br>
                 <div class="box">
                     <p>Ravioles de foie gras accompagnés de leur crème à la truffe</p>
                     <p>98€</p>
@@ -32,6 +33,7 @@
                     <p>105€</p>
                 </div>
                 <h3>Point d’orgue</h3>
+                <br>
                 <div class="box">
                     <p>Noix de coquilles Saint-Jacques sur lit de purée de céleri-rave</p>
                     <p>102€</p>
@@ -45,9 +47,12 @@
                     <p>169€</p>
                 </div>
                 <h3>Mouvement final</h3>
-                <p>Macaron noisette et chocolat, glace au caramel brun et sel de Guérande</p>
-                <p>Baba au rhum revisité avec son coulis de citron</p>
-                <p>Tarte au citron meringuée déstructurée</p>
+                <br>
+                <div class="dessert">
+                    <p>Macaron noisette et chocolat, glace au caramel brun et sel de Guérande</p>
+                    <p>Baba au rhum revisité avec son coulis de citron</p>
+                    <p>Tarte au citron meringuée déstructurée</p>
+                </div>
                 <footer>
                     <img id="img-petit" src="images/note.png" alt="Note de musique" /><h2>La note enchantée</h2>
                 </footer>
