--- a/le-chic-a-la-francaise.html
+++ b/le-chic-a-la-francaise.html
@@ -15,6 +15,7 @@
                 </header>
                 <div class="orange">
                     <h3>Pour se mettre en appétit</h3>
+                    <br>
                     <div class="box">
                         <p>Tartare de pulpe acidulé aux zests d’orange</p>
                         <p>79€</p>
@@ -30,6 +31,7 @@
                 </div>
                 <div class="violet">
                     <h3>Plaisir des papilles</h3>
+                    <br>
                     <div class="box">
                         <p>Coquilles Saint-Jacques accompagnées d’une purée de panais</p>
                         <p>95€</p>
@@ -45,9 +47,12 @@
                 </div>
                 <div class="bleu">
                     <h3>Gourmandises sucrées</h3>
-                    <p>Pétales de violettes glacés et purée de noisettes</p>
-                    <p>Fondant au chocolat revisité</p>
-                    <p>Millefeuille croustillant</p>
+                    <br>
+                    <div class="dessert">
+                        <p>Pétales de violettes glacés et purée de noisettes</p>
+                        <p>Fondant au chocolat revisité</p>
+                        <p>Millefeuille croustillant</p>
+                    </div>
                 </div>
             </div>
         </section>
