Nouvelle page mentions légales, lien sur le logo pour l'accueil, lien sur contactez-nous, footer fixed

--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
             <link rel="stylesheet" href="styles/css/style.css">
         </head>
         <body>
-            <header class="tete"><img class="logo" src="images/logo-ohmyfood.png" alt="logo" /></header>
+            <header class="tete"><a href="index.html"><img class="logo" src="images/logo-ohmyfood.png" alt="logo" /></a></header>
             <div class="container">
                 <a href="la-note-enchantee.html">
                     <article id="LNE">
@@ -36,8 +36,8 @@
             </div>
             <a href="#" class="button">Prochainement</a>
             <footer class="pied">
-                <a href="#">Mentions légales</a>
-                <a href="#">Contactez-nous</a>
+                <a href="mentions-legales.html">Mentions légales</a>
+                <a href="mailto:">Contactez-nous</a>
             </footer>
         </body>
     </html>
