--- a/la-note-enchantee.html
+++ b/la-note-enchantee.html
@@ -6,7 +6,7 @@
         <link rel="stylesheet" href="styles/css/style.css">
     </head>
     <body>
-        <header class="tete"><img class="logo" src="images/logo-ohmyfood.png" alt="logo" /></header>
+        <header class="tete"><a href="index.html"><img class="logo" src="images/logo-ohmyfood.png" alt="logo" /></a></header>
         <h1>La note enchantée</h1>
         <section class="container">
             <div id="LNE" class="menu">
@@ -59,8 +59,8 @@
             </div>
         </section>
         <footer class="pied">
-            <a href="#">Mentions légales</a>
-            <a href="#">Contactez-nous</a>
+            <a href="mentions-legales.html">Mentions légales</a>
+            <a href="mailto:">Contactez-nous</a>
         </footer>
     </body>
 </html>
