--- a/le-chic-a-la-francaise.html
+++ b/le-chic-a-la-francaise.html
@@ -6,7 +6,7 @@
         <link rel="stylesheet" href="styles/css/style.css">
     </head>
     <body>
-        <header class="tete"><img class="logo" src="images/logo-ohmyfood.png" alt="logo" /></header>
+        <header class="tete"><a href="index.html"><img class="logo" src="images/logo-ohmyfood.png" alt="logo" /></a></header>
         <h1>Le chic à la française</h1>
         <section class="container">
             <div id="LCALF" class="menu">
@@ -57,8 +57,8 @@
             </div>
         </section>
         <footer class="pied">
-            <a href="#">Mentions légales</a>
-            <a href="#">Contactez-nous</a>
+            <a href="mentions-legales.html">Mentions légales</a>
+            <a href="mailto:">Contactez-nous</a>
         </footer>
     </body>
 </html>
