Animation wiggle sur Contact et mentions légales

--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
             <link rel="stylesheet" href="styles/css/style.css">
         </head>
         <body>
-            <header class="tete"><a href="index.html"><img class="logo" src="images/logo-ohmyfood.png" alt="logo" /></a></header>
+            <header class="entete"><a href="index.html"><img class="logo" src="images/logo-ohmyfood.png" alt="logo" /></a></header>
             <div class="container">
                 <a href="la-note-enchantee.html">
                     <article id="LNE">
@@ -34,10 +34,10 @@
                     </article>
                 </a>
             </div>
-            <a href="#" class="button">Prochainement</a>
+            <button class="btn">Prochainement</button>
             <footer class="pied">
-                <a href="mentions-legales.html">Mentions légales</a>
-                <a href="mailto:">Contactez-nous</a>
+                <a class="secouer" href="mentions-legales.html">Mentions légales</a>
+                <a class="secouer" href="mailto:">Contactez-nous</a>
             </footer>
         </body>
     </html>
