--- a/le-chic-a-la-francaise.html
+++ b/le-chic-a-la-francaise.html
@@ -6,7 +6,7 @@
         <link rel="stylesheet" href="styles/css/style.css">
     </head>
     <body>
-        <header class="tete"><a href="index.html"><img class="logo" src="images/logo-ohmyfood.png" alt="logo" /></a></header>
+        <header class="entete"><a href="index.html"><img class="logo" src="images/logo-ohmyfood.png" alt="logo" /></a></header>
         <h1>Le chic à la française</h1>
         <section class="container">
             <div id="LCALF" class="menu">
