--- a/mentions-legales.html
+++ b/mentions-legales.html
@@ -6,7 +6,7 @@
         <link rel="stylesheet" href="styles/css/style.css">
     </head>
     <body>
-        <header class="tete"><a href="index.html"><img class="logo" src="images/logo-ohmyfood.png" alt="logo" /></a></header>
+        <header class="entete"><a href="index.html"><img class="logo" src="images/logo-ohmyfood.png" alt="logo" /></a></header>
         <h1>Mentions légales</h1>
         <footer class="pied">
             <a href="mentions-legales.html">Mentions légales</a>
