Ajout animation de surlignement sur les titres (entrée, plat, dessert)

--- a/la-note-enchantee.html
+++ b/la-note-enchantee.html
@@ -14,7 +14,7 @@
                     <img src="images/note.png" alt="Note de musique" />
                     <h2>La note enchantée</h2>
                 </header>
-                <h3>Prélude</h3>
+                <div class="trait"><h3>Prélude</h3></div>
                 <br>
                 <div class="box">
                     <p>Ravioles de foie gras accompagnés de leur crème à la truffe</p>
@@ -32,7 +32,8 @@
                     <p>Foie gras de canard cuit entier, confiture de figue et pain toasté</p>
                     <p>105€</p>
                 </div>
-                <h3>Point d’orgue</h3>
+                <br>
+                <div class="trait"><h3>Point d’orgue</h3></div>
                 <br>
                 <div class="box">
                     <p>Noix de coquilles Saint-Jacques sur lit de purée de céleri-rave</p>
@@ -46,7 +47,8 @@
                     <p>Mijoté de queue de bœuf et riz sauvage aux zests citron</p>
                     <p>169€</p>
                 </div>
-                <h3>Mouvement final</h3>
+                <br>
+                <div class="trait"><h3>Mouvement final</h3></div>
                 <br>
                 <div class="dessert">
                     <p>Macaron noisette et chocolat, glace au caramel brun et sel de Guérande</p>
@@ -59,8 +61,8 @@
             </div>
         </section>
         <footer class="pied">
-            <a href="mentions-legales.html">Mentions légales</a>
-            <a href="mailto:">Contactez-nous</a>
+            <a class="secouer" href="mentions-legales.html">Mentions légales</a>
+            <a class="secouer" href="mailto:">Contactez-nous</a>
         </footer>
     </body>
 </html>
