--- a/le-chic-a-la-francaise.html
+++ b/le-chic-a-la-francaise.html
@@ -14,7 +14,7 @@
                     <h2>Le chic à la française</h2>
                 </header>
                 <div class="orange">
-                    <h3>Pour se mettre en appétit</h3>
+                    <div class="trait"><h3>Pour se mettre en appétit</h3></div>
                     <br>
                     <div class="box">
                         <p>Tartare de pulpe acidulé aux zests d’orange</p>
@@ -29,8 +29,9 @@
                         <p>57€</p>
                     </div>
                 </div>
+                <br>
                 <div class="violet">
-                    <h3>Plaisir des papilles</h3>
+                    <div class="trait"><h3>Plaisir des papilles</h3></div>
                     <br>
                     <div class="box">
                         <p>Coquilles Saint-Jacques accompagnées d’une purée de panais</p>
@@ -45,8 +46,9 @@
                         <p>175€</p>
                     </div>
                 </div>
+                <br>
                 <div class="bleu">
-                    <h3>Gourmandises sucrées</h3>
+                    <div class="trait"><h3>Gourmandises sucrées</h3></div>
                     <br>
                     <div class="dessert">
                         <p>Pétales de violettes glacés et purée de noisettes</p>
@@ -57,8 +59,8 @@
             </div>
         </section>
         <footer class="pied">
-            <a href="mentions-legales.html">Mentions légales</a>
-            <a href="mailto:">Contactez-nous</a>
+            <a class="secouer" href="mentions-legales.html">Mentions légales</a>
+            <a class="secouer" href="mailto:">Contactez-nous</a>
         </footer>
     </body>
 </html>
