--- a/le-delice-des-papilles.html
+++ b/le-delice-des-papilles.html
@@ -13,7 +13,7 @@
                 <header>
                     <h2>Le délice des papilles</h2>
                 </header>
-                <h3 class="trait-bleu-fonce">Pour bien commencer</h3>
+                <div class="trait-bleu-fonce"><h3>Pour bien commencer</h3></div>
                 <br>
                 <div class="box">
                     <p>Tartare de thon assaisonné au yuzu</p>
@@ -27,7 +27,8 @@
                     <p>Velouté de cèpes aux truffes</p>
                     <p>56€</p>
                 </div>
-                <h3 class="trait-bleu">Pour bien continuer</h3>
+                <br>
+                <div class="trait-bleu"><h3>Pour bien continuer</h3></div>
                 <br>
                 <div class="box">
                     <p>Poulet rôti aux herbes de provence et sa crème de truffe</p>
@@ -41,7 +42,8 @@
                     <p>Côte de bœuf angus et sa purée de panais</p>
                     <p>115€</p>
                 </div>
-                <h3 class="trait-bleu-clair">Pour bien terminer</h3>
+                <br>
+                <div class="trait-bleu-clair"><h3>Pour bien terminer</h3></div>
                 <br>
                 <div class="box">
                     <p>Farandole de desserts du chef</p>
@@ -60,8 +62,8 @@
             </div>
         </section>
         <footer class="pied">
-            <a href="mentions-legales.html">Mentions légales</a>
-            <a href="mailto:">Contactez-nous</a>
+            <a class="secouer" href="mentions-legales.html">Mentions légales</a>
+            <a class="secouer" href="mailto:">Contactez-nous</a>
         </footer>
     </body>
 </html>
