--- a/mentions-legales.html
+++ b/mentions-legales.html
@@ -9,8 +9,8 @@
         <header class="entete"><a href="index.html"><img class="logo" src="images/logo-ohmyfood.png" alt="logo" /></a></header>
         <h1>Mentions légales</h1>
         <footer class="pied">
-            <a href="mentions-legales.html">Mentions légales</a>
-            <a href="mailto:">Contactez-nous</a>
+            <a class="secouer" href="mentions-legales.html">Mentions légales</a>
+            <a class="secouer" href="mailto:">Contactez-nous</a>
         </footer>
     </body>
 </html>
