--- a/la-palette-du-gout.html
+++ b/la-palette-du-gout.html
@@ -13,7 +13,7 @@
                 <header>
                     <h2>La palette du goût</h2>
                 </header>
-                <h3>Esquisse</h3>
+                <div class="trait"><h3>Esquisse</h3></div>
                 <br>
                 <div class="box">
                     <p>Fricassé d’escargot au piment d’espelette</p>
@@ -27,7 +27,8 @@
                     <p>Foie gras de canard mi-cuit et ses copeaux de truffe noire</p>
                     <p>65€</p>
                 </div>
-                <h3>Œuvre de maître</h3>
+                <br>
+                <div class="trait"><h3>Œuvre de maître</h3></div>
                 <br>
                 <div class="box">
                     <p>Filet de bœuf aux herbes accompagné de sa ribambelle de légumes</p>
@@ -41,7 +42,8 @@
                     <p>Filet de Turbot aux agrumes</p>
                     <p>125€</p>
                 </div>
-                <h3>Au sommet de l’art</h3>
+                <br>
+                <div class="trait"><h3>Au sommet de l’art</h3></div>
                 <br>
                 <div class="box">
                     <p>Paris-Brest revisité</p>
@@ -60,8 +62,8 @@
             </div>
         </section>
         <footer class="pied">
-            <a href="mentions-legales.html">Mentions légales</a>
-            <a href="mailto:">Contactez-nous</a>
+            <a class="secouer" href="mentions-legales.html">Mentions légales</a>
+            <a class="secouer" href="mailto:">Contactez-nous</a>
         </footer>
     </body>
 </html>
