--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
     <html lang="fr">
         <head>
             <meta charset="utf-8"/>
+            <meta name="viewport" content="width=device-width, initial-scale=0.8">
             <title>Ohmyfood</title>
             <link rel="stylesheet" href="styles/css/style.css">
         </head>
